fixed overflow

--- a/src/css/project.less
+++ b/src/css/project.less
@@ -230,6 +230,7 @@
 }
 
 .profiles-container {
+  overflow:hidden;
   margin: 50px auto;
   padding: 50px 0;
   border-top: 1px solid @light-gray;
